Some tests have started failing due to JDK changes with respect to handling spaces in paths. This cl fixes that, though the tests now depend on Java 1.4 or later. Hopefully in 2011 this is not an issue for anyone.